...
                android:text="@string/either_you_run_the_day_or_the_day_runs_you"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Display1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorTextHint"
            android:onClick="onClick"
            android:text="@string/add_item" />
...
